CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.1        |
+-----------------------+
BUGFIXES
19-08-06    Improved SQL parser regex to be able to catch tables like event-media

IMPROVEMENTS

+-----------------------+
| VERSION: 0.6.0        |
+-----------------------+
BUGFIXES
13-08-06    Fixed portuguese translation encoding
05-08-06    Fixed error returned when requesting a non-existent article
            (AJ Tarachanowicz)
30-07-06    Fixed bug where admins details could not be saved (jwang1973)
14-07-06    Email sending returns PEAR errors on fails, this was not checked
            properly
14-07-06    Updates fixed on generated modules
12-06-06    Fixed bug where detect missing perms didn't work on windows installs
            (Marian Seitner)
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
14-08-06    Adding a javascript file to a manager must now be done with the path
            from the webroot.
                old way: $input->javascriptSrc = array('jscalendar/calendar.js')
                new way: $input->javascriptSrc = array('js/jscalendar/calendar.js')
13-08-06    Classic theme replaces 'default', 'default' deleted
10-08-06    Module config files can now be edited via admin GUI
            (Julien Casanova)
10-08-06    Improved header injection testing as per
            http://asg.web.cmu.edu/rfc/rfc822.html#sec-3.1.1
            (rofranco)
09-08-06    Default RSS block now configurable (Werner Krauss)
09-08-06    Implemented open_basedir detection (Steven Stremciuc)
06-08-06    Added perms on category file views (Werner Krauss)
06-08-06    Implemented improved wizard functionality based on PEAR's
            HTML_QuickForm_Controller (Malaney J. Hill)
05-08-06    Implemented full module install/uninstall for admin users
05-08-06    Renamed DA_Default::retrieveAllModules to DA_Default::getModuleHash()
            to improve clarity